public/css/page-session.css
/* -------------------------------- */
/* --------- PAGE SESSION --------- */
/* -------------------------------- */

.characters-line {
    position: absolute;
    z-index: 10;
    right: 24px;
    &.pnjs { top: -32px; }
    &.pjs { bottom: -24px; }
}

@media (max-width: 576px) { .characters-line { visibility: collapse; } }
@media (max-width: 480px) { .characters-line { visibility: collapse; } }

.scene-text {
    line-height: 1.6; }

/* VIGNETTE LIGNE SESSION CAROUSSEL */

.vignette-caroussel {
        position: relative;
        z-index: 20;
        filter: brightness(0.66);
        transition: 0.5s;
        width: 128px;
        border: solid var(--primary-trans) 1px;

        &:hover .episode-titre { visibility: visible; }
        &.active .episode-titre { visibility: hidden; }

        .episode-titre {
            visibility: hidden;
            position: absolute;
            z-index: 100;
            bottom: -1.75rem;
            left: 50%;
            transform: translate(-50%);
            overflow-x: visible;
            white-space: nowrap;
            color: var(--white);
            font-weight: bold;
            font-size: var(--small);
            background-color: var(--primary);
            border-radius: 4px;
            padding: 4px 8px;         
        }

        &:hover, &.active {
            filter: brightness(1);
            transition: 0.5s;
        }

        &.active {
            width: 180px;
            border: solid var(--primary) 1px;
        }
    
        .number-session-caroussel {
            z-index: 10;
            right: 4px;
            bottom: -4px;
            font-size: 2rem;
            font-weight: bold;
            color: var(--white);
            text-shadow: 0px 2px 8px black;
            
            &.active {
                font-size: 3rem;
                right: 8px;
            }
        }
}

